[package]
name = "rawst_dl"
version = "0.7.0"
authors = ["Faseeh Shahzad"]
description = "Snag your files efficiently with Rawst downloader"
repository = "https://github.com/Jupiee/rawst"
license = "GPL-3.0"
readme = "README.md"
edition = "2021"
default-run = "rawst"
include = ["src/**/*"]
categories = ["command-line-utilities", "network-programming", "asynchronous"]
keywords = ["cli", "async", "http", "network", "download-manager"]

[dependencies]
base64 = "0.22.1"
chrono = "0.4.39"
clap = { version = "4.5.26", features = ["cargo", "derive"] }
clap-num = "1.1.1"
clap_complete = "4.5.42"
concolor-clap = "0.1.0"
directories = "6.0.0"
fern = { version = "0.7.1", features = ["chrono", "colored"] }
futures = "0.3.31"
humantime = "2.1.0"
indicatif = "0.17.9"
iri-string = { version = "0.7.7", features = ["serde"] }
log = "0.4.25"
reqwest = {version= "0.12.12", default-features = false, features = ["stream", "rustls-tls", "cookies"]}
serde = {version= "1.0.217", features = ["derive"]}
serde_json = "1.0.135"
sha2 = "0.10.8"
tokio = {version= "1.43.0", features = ["full"]}
toml = "0.8.19"

[profile.dev]
debug = 0
strip = "debuginfo"
opt-level = 1  # Use slightly better optimizations. Reduces ./target/debug size.

[profile.release]
opt-level = "s"
codegen-units = 1
lto= "fat"
